consistency checks